@@ -1,16 +1,14 @@
 package ru.practicum.ewm.server.stats.service;
 
 import java.time.LocalDateTime;
-import java.util.Comparator;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.ewm.dto.stats.StatRequestDto;
 import ru.practicum.ewm.dto.stats.StatResponseDto;
 import ru.practicum.ewm.server.stats.model.EndpointHit;
-import ru.practicum.ewm.server.stats.model.ShortEndpointHit;
+import ru.practicum.ewm.server.stats.model.StatDataView;
 import ru.practicum.ewm.server.stats.repository.StatRepository;
 
 @Service
@@ -21,38 +19,29 @@ public class StatServiceImpl implements StatService {
 
     @Override
     public void saveStats(StatRequestDto statRequestDto) {
-        EndpointHit endpointHitData = statMapper.statRequestDtoToEndpointHitData(statRequestDto);
-        statRepository.save(endpointHitData);
+        EndpointHit endpointHit = statMapper.statRequestDtoToEndpointHit(statRequestDto);
+        statRepository.save(endpointHit);
     }
 
     @Override
-    public List<StatResponseDto> getStats(LocalDateTime start, LocalDateTime end, Set<String> uris, Boolean unique) {
-        List<ShortEndpointHit> shortEndpointHitList;
-        if (uris == null) {
-            shortEndpointHitList = statRepository.getAllStats(start, end);
+    @Transactional(readOnly = true)
+    public List<StatResponseDto> getStats(LocalDateTime start, LocalDateTime end, String[] uris, Boolean unique) {
+        List<StatDataView> statDataViews;
+        if (uris[0].equals("0")) {
+            if (unique) {
+                statDataViews = statRepository.getAllStatDataViewWithDistinctIp(start, end);
+            } else {
+                statDataViews = statRepository.getAllStatDataView(start, end);
+            }
         } else {
-            shortEndpointHitList = statRepository.getAllStatsFromIpSet(uris, start, end);
+            if (unique) {
+                statDataViews = statRepository.getAllStatDataViewInUrisAndDistinctIp(uris, start, end);
+            } else {
+                statDataViews = statRepository.getAllStatDataViewInUris(uris, start, end);
+            }
         }
-        if (unique) {
-            return shortEndpointHitList.stream()
-                    .map(shortEndpointHit -> statMapper.shortEndpointHitToStatResponseDto(
-                                    shortEndpointHit, statRepository.countByAppAndUriAndTimestampBetweenWhenIpIsUnique(
-                                            shortEndpointHit.getApp(), shortEndpointHit.getUri(), start, end
-                                    )
-                            )
-                    )
-                    .sorted(Comparator.comparingInt(StatResponseDto::getHits).reversed())
-                    .collect(Collectors.toList());
-        } else {
-            return shortEndpointHitList.stream()
-                    .map(shortEndpointHit -> statMapper.shortEndpointHitToStatResponseDto(
-                                    shortEndpointHit, statRepository.countByAppAndUriAndTimestampBetween(
-                                            shortEndpointHit.getApp(), shortEndpointHit.getUri(), start, end
-                                    )
-                            )
-                    )
-                    .sorted(Comparator.comparingInt(StatResponseDto::getHits).reversed())
-                    .collect(Collectors.toList());
-        }
+        return statDataViews.stream()
+                .map(statMapper::statDataViewtToStatResponseDto)
+                .toList();
     }
 }
